Add GlueStack UI

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,9 +13,12 @@
       "@components/*": [
         "src/components/*"
       ],
+      "@ui/*": [
+        "src/components/ui/*"
+      ],
       "@colors": [
         "src/constants/Colors.ts"
-      ]
+      ],
     }
   },
   "include": [
