--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@gluestack-ui/nativewind-utils": "^1.0.26",
+    "@gluestack-ui/overlay": "^0.1.22",
+    "@gluestack-ui/toast": "^1.0.9",
     "expo": "~53.0.9",
     "expo-constants": "~17.1.6",
     "expo-linking": "~7.1.5",
@@ -21,7 +24,7 @@
     "react-native-reanimated": "3.16.2",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.10.0",
-    "react-native-svg": "15.11.2",
+    "react-native-svg": "^15.11.2",
     "react-native-web": "^0.20.0",
     "tailwindcss": "^3.4.17"
   },
