--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   },
   "dependencies": {
     "@expo/html-elements": "^0.4.2",
+    "@gluestack-ui/actionsheet": "^0.2.53",
+    "@gluestack-ui/icon": "^0.1.27",
     "@gluestack-ui/nativewind-utils": "^1.0.26",
     "@gluestack-ui/overlay": "^0.1.22",
+    "@gluestack-ui/select": "^0.1.31",
     "@gluestack-ui/toast": "^1.0.9",
+    "@legendapp/motion": "^2.4.0",
     "expo": "~53.0.9",
     "expo-constants": "~17.1.6",
     "expo-linear-gradient": "^14.1.4",
@@ -28,8 +32,8 @@
     "react-native-screens": "~4.10.0",
     "react-native-svg": "^15.11.2",
     "react-native-web": "^0.20.0",
-    "tailwindcss": "^3.4.17",
-    "react-native-webview": "13.13.5"
+    "react-native-webview": "13.13.5",
+    "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
