--- a/tsconfig.json
+++ b/tsconfig.json
@@ -17,7 +17,7 @@
         "src/components/ui/*"
       ],
       "@colors": [
-        "src/constants/Colors.ts"
+        "src/theme/colors.ts"
       ],
     }
   },
