--- a/.gitignore
+++ b/.gitignore
@@ -30,8 +30,11 @@ yarn-error.*
 .DS_Store
 *.pem
 
-# local env files
+# env files
 .env*.local
+.env
+.env.local
+.env.production
 
 # typescript
 *.tsbuildinfo
